--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jquery": "^3.2.1",
     "require-dir": "^0.3.2",
     "run-sequence": "^2.2.0",
+    "gulp-gh-pages": "*",
     "penny-mixins": "git://github.com/juandinella/penny-mixins.git"
   }
 }
